# ldmx-sw

./: .dir-locals.el  .dockerignore  .gitignore  .gitmodules  .ldmxrc  BuildMacros.cmake  CMakeLists.txt  CompilerWarnings.cmake  Dockerfile  FindCatch2.cmake  FindGDML.cmake  FindLCDD.cmake  FindLDMXSW.cmake  FindONNXRuntime.cmake  InterProceduralOptimization.cmake  NewProcessor.py  README.md  Sanitizers.cmake  StaticAnalysis.cmake  config.py  git_push.sh  install.cmake.in  justfile
Algo/: CMakeLists.txt  README.md
Algo/python/: dump_file_writer.py  trigger_cfi.py  trigger_ecal_sum.py  trigger_energy_sums.py
BeamInstrumentation/: CMakeLists.txt  README.md
BeamInstrumentation/configs/: runBeamInstrumentationDecoder.py
BeamInstrumentation/python/: FiberTrackerDecoder.py  WhiteRabbitDecoder.py
Biasing/: CMakeLists.txt
Biasing/python/: dark_brem.py  eat.py  ecal.py  ecal_2.py  ecal_pn.py  event_filters.py  filters.py  include.py  include.py.in  particle_filter.py  target.py  target_en.py  target_pn.py  track_filters.py  util.py
Biasing/src/: BiasingMessenger.cxx  DarkBremFilter.cxx  DarkBremFilterMessenger.cxx  DarkBremXsecBiasingOperator.cxx  ECalPhotonuclearBiasingPlugin.cxx  EcalBremFitler.cxx  EcalDarkBremFilter.cxx  EcalENFilter.cxx  EcalProcessFilter.cxx  EcalProcessFilterMessenger.cxx  ElectroNuclearXsecBiasingOperator.cxx  GammaToMuPairXsecBiasingOperator.cxx  PartialEnergySorter.cxx  PhotoNuclearProductsFilter.cxx  PhotoNuclearXsecBiasingOperator.cxx  PhotonuclearXsecBiasingOperator.cxx  PrimaryToEcalFilter.cxx  SimpleProcessFilter.cxx  SimpleProcessFilterMessenger.cxx  TargetBremFilter.cxx  TargetBremFilterMessenger.cxx  TargetDarkBremFilter.cxx  TargetDarkBremFilterMessenger.cxx  TargetENProcessFilter.cxx  TargetENProcessFilterMessenger.cxx  TargetPhotonuclearBiasingPlugin.cxx  TargetProcessFilter.cxx  TargetProcessFilter.h  TrackProcessFilter.cxx  XsecBiasingOperator.cxx  XsecBiasingOperatorMessenger.cxx  electroNuclearTargetProcessFilter.cxx
Biasing/test/: ecal_brem_pn.py  ecal_conv_deep.py  ecal_conv_deep_fromTarget.py  ecal_db.py  ecal_en.py  ecal_pn.py  ecal_pn2.py  ecal_pn_deep.py  ecal_pn_nonfiducial.py  energy_sort.py  old_target_db.py  resim_ecal_conv_deep.py  resim_ecal_pn_deep.py  target_db.py  target_en.py  target_mumu.py  target_pn.py
Configuration/: CMakeLists.txt
Configuration/data/: W_hists_Owen_Omar.root  bdt_3_9_2017.pkl  bdt_data_train_FALSE.pkl  p001_nf_bdt.pkl  p01_nf_bdt.pkl  p0_nf_bdt.pkl  p1_nf_bdt.pkl  particle-net_ecal_v9.onnx  test.pkl
Configuration/python/: bdt_skim.py  det_id_check.py  makePath.py.in  my_process.py  pn_reweight.py  recon_trig_skim.py  sample_digi.py  sample_drop_keep.py  sample_plotter.py  sample_recon_Hcal.py  sample_skim.py  sample_standalone.py  sample_trigScintDQM.py  sim_recon_prod.py  sim_recon_prod.py.tmpl  trigger_skim.py  v3_recon_skim.py
DQM/: CMakeLists.txt
DQM/python/: PN.py  dqm.py  ecalDigiVerify.py  ecalPN.py  hcal.py  recoilTracker.py  trigScintHitDQM.py  trigScintSimDQM.py  triggerPad.py  umn.py
DQM/src/: AnalysisUtils.cxx  EcalDigiVerifier.cxx  EcalPN.cxx  HCalDQM.cxx  Histogram1DBuilder.cxx  PhotoNuclearDQM.cxx  RecoilTrackerDQM.cxx  TrigScintDQM.cxx  TrigScintHitDQM.cxx
DQM/test/: comp.sh  compare.py  inclusive.py
DetDescr/: CMakeLists.txt  README.md
DetDescr/python/: EcalGeometry.py  EcalHexReadout.py  HcalGeometry.py
DetDescr/src/: DefaultDetectorID.cxx  DetectorDataServiceImpl.cxx  DetectorElement.cxx  DetectorElementImpl.cxx  DetectorGeometry.cxx  DetectorID.cc  DetectorID.cxx  DetectorIDInterpreter.cxx  DetectorId.cc  Ecal.cxx  EcalDetectorElement.cxx  EcalDetectorID.cxx  EcalHexReadout.cxx  EcalID.cxx  EcalTriggerID.cxx  Hcal.cxx  HcalDetId.cxx  HcalDetectorElement.cxx  HcalDetectorID.cxx  HcalID.cxx  IDField.cxx  IdField.cc  RecoilTracker.cxx  RecoilTrackerDetectorElement.cxx  SimSpecialID.cxx  Tagger.cxx  TaggerDetectorElement.cxx  Target.cxx  TargetDetectorElement.cxx  Top.cxx  TopDetectorElement.cxx  TrackerID.cxx  TrigScintID.cxx  TriggerPad.cxx  TriggerPadDetectorElement.cxx  import_detector.cxx  print_ecal_hex_readout.cxx
DetDescr/test/: DefaultDetectorID_test.cxx  DetectorDataService_test.cxx  DetectorElementFactory_test.cxx  DetectorIDTest.cxx  detector_id_test.cc  ldmx_detector_id_test.cxx
Detectors/: CMakeLists.txt
Detectors/data/: README.md  geomodel.dtd
Detectors/python/: fix_gdml_names.py  makePath.py  makePath.py.in  write.py
Detectors/test/: lyso_signal_10MeV_config.py  reducedLDMX_eGun_config.py
Detectors/util/: calculate_layer_weights.py  ecal_layer_stack.py
Ecal/: CMakeLists.txt  README.md
Ecal/data/: README.md  RoC_4gev.csv  RoC_v14_8gev.csv  cellxy.txt  segmip.onnx
Ecal/exampleConfigs/: ecal-resolution-study-with-trig-prim-monoenergetic-beam.py  ecal-resolution-study-with-trig-prim-uniform-energy-beam.py  trig-prim-analyzer.py
Ecal/python/: EcalDetectorMap.py  EcalGeometry.py  digi.py  dnnEcalVeto.py  ecalClusters.py  ecalDigis.py  ecalRecon.py  ecalSim2Rec.py  makePath.py  vetos.py
Ecal/src/: ClusterAnalyzer.cxx  DNNEcalVetoProcessor.cxx  EcalClusterProducer.cxx  EcalDigiProducer.cxx  EcalDigiVerifier.cxx  EcalRecProducer.cxx  EcalRecon.cxx  EcalSim2Rec.cxx  EcalVetoProcessor.cxx  WorkingCluster.cxx
Ecal/test/: EcalDigiPipelineTest.cxx  ecal_digi_pipeline.py
Event/: CMakeLists.txt
Event/cmake/: EventConfig.cmake.in  EventConfigVersion.cmake.in
Event/include/: EcalVetoResult.h
Event/python/: dictionary.py
Event/src/: CalorimeterHit.cxx  ClusterAlgoResult.cxx  DigiCollection.cxx  EcalCluster.cxx  EcalDigiCollection.cxx  EcalHit.cxx  EcalVetoResult.cxx  Event.cc  Event.cxx  EventConstants.cxx  EventFile.cxx  EventImpl.cxx  FindableTrackResult.cxx  HcalHit.cxx  HcalStripHit.cxx  HcalVetoResult.cxx  ProductTag.cc  (+28 more)
EventDisplay/: CMakeLists.txt  README.md
EventModel/: CMakeLists.txt
EventProc/: CMakeLists.txt
Framework/: CMakeLists.txt
Recon/: CMakeLists.txt
SimApplication/: CMakeLists.txt
Tools/: CMakeLists.txt
Validation/: .gitignore  README.md  pyproject.toml  run.sh  setup.py  simulation.py  test.ipynb
(+3662 files in other folders)
